# Borg

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  pyproject.toml
.agents/skills/sim-development/: SKILL.md
.agents/skills/sim-development/agents/: openai.yaml
.agents/skills/task-design/: SKILL.md
crates/borg-cli/: Cargo.toml
crates/borg-cli/src/: main.rs  write_jsonl.rs
crates/borg-core/: Cargo.toml
crates/borg-core/src/: engine.rs  lib.rs  module.rs  registry.rs  types.rs
crates/borg-core/src/compute_sims/: compute_sim.rs  mod.rs  table_lookup.rs
crates/borg-core/src/model_runners/: mod.rs  model_runner.rs  moe_ep.rs  ring.rs
crates/borg-core/src/models/: llama3_1.rs  mod.rs  model.rs  qwen3_moe.rs
crates/borg-core/src/network_sims/: flow.rs  mod.rs  network_sim.rs
crates/borg-core/src/routers/: mod.rs  moe_load_balancing.rs  round_robin.rs  router.rs
crates/borg-core/src/schedulers/: chunked_prefill.rs  mod.rs  prefix_cache.rs  scheduler.rs
crates/borg-core/src/systems/: mod.rs  moe_ep_multi_instance.rs  multi_instance.rs  pd_disaggregation.rs  single_instance.rs  system.rs
profile_receipts/: llama3_1_8b.yaml  qwen3_30b_a3b.yaml
python/borg/: perf.py
scenarios/moe/: borg.toml
scenarios/multi-gpu/: borg.toml
scenarios/pd-disaggregation/: borg.toml
scenarios/prefix-caching/: borg.toml
scenarios/single-gpu/: borg.toml
scenarios/tool-call/: borg.toml
scripts/: vllm-profile.py
workloads/: README.md  sharegpt.jsonl  swe-bench.jsonl  tau-bench.jsonl
